[package]
name = "repub"
version = "0.1.0"
authors = ["crome <crome110mine@gmail.com>"]
edition = "2018"
description = "convert markdown(s) to epub"
license = "MIT"
categories = ["epub","markdown"]

[dependencies]
failure = "0.1"
comrak = "0.6"
clap = "2"
rand = "0.6"
chrono = "0.4"
html5ever = "*"
zip = "0.5"
serde = { version = "1.0", features = ["derive"] }
colored = "1.8"