[package]
name = "repub"
version = "0.1.1"
authors = ["Kaisei Yokoyama <yokoyama.kaisei.sm@alumni.tsukuba.ac.jp>"]
edition = "2018"

description = "A tool to convert markdown documents to epub."
license = "MIT"
repository = "https://github.com/KaiseiYokoyama/repub"
readme = "README.md"
categories = ["epub","markdown"]

exclude = [
    "test/*"
]

[dependencies]
failure = "0.1"
comrak = "0.6"
clap = "2"
rand = "0.6"
chrono = "0.4"
html5ever = "*"
zip = "0.5"
serde = { version = "1.0", features = ["derive"] }
colored = "1.8"