[package]
name = "repub"
version = "0.4.0"
authors = ["Kaisei Yokoyama <yokoyama.kaisei.sm@alumni.tsukuba.ac.jp>"]
edition = "2018"

description = "A tool to convert markdown documents to epub."
license = "MIT"
repository = "https://github.com/KaiseiYokoyama/repub"
readme = "README.md"
keywords = ["repub", "epub", "markdown", "eBook"]
categories = ["text-processing", "command-line-utilities"]

exclude = [
    "test/*",
    "examples/*",
    ".github/*",
    ".travis.yml",
    ".repub.iml",
]

[dependencies]
failure = "0.1"
comrak = "0.6"
clap = "2"
rand = "0.7"
chrono = "0.4"
html5ever = "0.24"
zip = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#colored = "1.8"
colored_truecolor = "0.1.0"
log = "0.4"
env_logger = "0.6"